<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="@dimen/_48ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_80sdp"
        android:text="@string/to_my_app"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edt_email_signup"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_emile"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edt_pass_signup"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edt_pass2_signup"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:background="@drawable/custom"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_password_again"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_signup_"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_up" />

</LinearLayout>